# textscribe

./: CHANGELOG.txt  LICENSE  README.md  setup.cfg  setup.py
textscribe/: scribe.py
textscribe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
