
[metadata]
name = textscribe
version = 0.0.1
author = Hunter Thomas
author_email = jamescalam94@gmail.com
description = Easily Structuring Data
long_description = file: README.txt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True